fixed ordering of hash

--- a/data/states/jp.yml
+++ b/data/states/jp.yml
@@ -1,96 +1,96 @@
 # data was sourced from http://en.wikipedia.org/wiki/Japanese_prefectures
 ---
-- - 'JP-23'
-  - '愛知県'
-- - 'JP-05'
-  - '秋田県'
-- - 'JP-02'
-  - '青森県'
-- - 'JP-12'
-  - '千葉県'
-- - 'JP-38'
-  - '愛媛県'
-- - 'JP-18'
-  - '福井県'
-- - 'JP-40'
-  - '福岡県'
-- - 'JP-07'
-  - '福島県'
-- - 'JP-21'
-  - '岐阜県'
-- - 'JP-10'
-  - '群馬県'
-- - 'JP-34'
-  - '広島県'
-- - 'JP-01'
-  - '北海道'
-- - 'JP-28'
-  - '兵庫県'
-- - 'JP-08'
-  - '茨城県'
-- - 'JP-17'
-  - '石川県'
-- - 'JP-03'
-  - '岩手県'
-- - 'JP-37'
-  - '香川県'
-- - 'JP-46'
-  - '鹿児島県'
-- - 'JP-14'
-  - '神奈川県'
-- - 'JP-39'
-  - '高知県'
-- - 'JP-43'
-  - '熊本県'
-- - 'JP-26'
-  - '京都府'
-- - 'JP-24'
-  - '三重県'
-- - 'JP-04'
-  - '宮城県'
-- - 'JP-45'
-  - '宮崎県'
-- - 'JP-20'
-  - '長野県'
-- - 'JP-42'
-  - '長崎県'
-- - 'JP-29'
-  - '奈良県'
-- - 'JP-15'
-  - '新潟県'
-- - 'JP-44'
-  - '大分県'
-- - 'JP-33'
-  - '岡山県'
-- - 'JP-47'
-  - '沖縄県'
-- - 'JP-27'
-  - '大阪府'
-- - 'JP-41'
-  - '佐賀県'
-- - 'JP-11'
-  - '埼玉県'
-- - 'JP-25'
-  - '滋賀県'
-- - 'JP-32'
-  - '島根県'
-- - 'JP-22'
-  - '静岡県'
-- - 'JP-09'
-  - '栃木県'
-- - 'JP-36'
-  - '徳島県'
-- - 'JP-13'
-  - '東京都'
-- - 'JP-31'
-  - '鳥取県'
-- - 'JP-16'
-  - '富山県'
-- - 'JP-30'
-  - '和歌山県'
-- - 'JP-06'
-  - '山形県'
-- - 'JP-35'
-  - '山口県'
-- - 'JP-19'
-  - '山梨県'
+- - '愛知県'
+  - 'JP-23'
+- - '秋田県'
+  - 'JP-05'
+- - '青森県'
+  - 'JP-02'
+- - '千葉県'
+  - 'JP-12'
+- - '愛媛県'
+  - 'JP-38'
+- - '福井県'
+  - 'JP-18'
+- - '福岡県'
+  - 'JP-40'
+- - '福島県'
+  - 'JP-07'
+- - '岐阜県'
+  - 'JP-21'
+- - '群馬県'
+  - 'JP-10'
+- - '広島県'
+  - 'JP-34'
+- - '北海道'
+  - 'JP-01'
+- - '兵庫県'
+  - 'JP-28'
+- - '茨城県'
+  - 'JP-08'
+- - '石川県'
+  - 'JP-17'
+- - '岩手県'
+  - 'JP-03'
+- - '香川県'
+  - 'JP-37'
+- - '鹿児島県'
+  - 'JP-46'
+- - '神奈川県'
+  - 'JP-14'
+- - '高知県'
+  - 'JP-39'
+- - '熊本県'
+  - 'JP-43'
+- - '京都府'
+  - 'JP-26'
+- - '三重県'
+  - 'JP-24'
+- - '宮城県'
+  - 'JP-04'
+- - '宮崎県'
+  - 'JP-45'
+- - '長野県'
+  - 'JP-20'
+- - '長崎県'
+  - 'JP-42'
+- - '奈良県'
+  - 'JP-29'
+- - '新潟県'
+  - 'JP-15'
+- - '大分県'
+  - 'JP-44'
+- - '岡山県'
+  - 'JP-33'
+- - '沖縄県'
+  - 'JP-47'
+- - '大阪府'
+  - 'JP-27'
+- - '佐賀県'
+  - 'JP-41'
+- - '埼玉県'
+  - 'JP-11'
+- - '滋賀県'
+  - 'JP-25'
+- - '島根県'
+  - 'JP-32'
+- - '静岡県'
+  - 'JP-22'
+- - '栃木県'
+  - 'JP-09'
+- - '徳島県'
+  - 'JP-36'
+- - '東京都'
+  - 'JP-13'
+- - '鳥取県'
+  - 'JP-31'
+- - '富山県'
+  - 'JP-16'
+- - '和歌山県'
+  - 'JP-30'
+- - '山形県'
+  - 'JP-06'
+- - '山口県'
+  - 'JP-35'
+- - '山梨県'
+  - 'JP-19'
