--- a/data/states/en_jp.yml
+++ b/data/states/en_jp.yml
@@ -1,96 +1,96 @@
 # data was sourced from http://en.wikipedia.org/wiki/Japanese_prefectures
 ---
-- - 'JP-23'
-  - 'Aichi'
-- - 'JP-05'
-  - 'Akita'
-- - 'JP-02'
-  - 'Aomori'
-- - 'JP-12'
-  - 'Chiba'
-- - 'JP-38'
-  - 'Ehime'
-- - 'JP-18'
-  - 'Fukui'
-- - 'JP-40'
-  - 'Fukuoka'
-- - 'JP-07'
-  - 'Fukushima'
-- - 'JP-21'
-  - 'Gifu'
-- - 'JP-10'
-  - 'Gunma'
-- - 'JP-34'
-  - 'Hiroshima'
-- - 'JP-01'
-  - 'Hokkaidō'
-- - 'JP-28'
-  - 'Hyōgo'
-- - 'JP-08'
-  - 'Ibaraki'
-- - 'JP-17'
-  - 'Ishikawa'
-- - 'JP-03'
-  - 'Iwate'
-- - 'JP-37'
-  - 'Kagawa'
-- - 'JP-46'
-  - 'Kagoshima'
-- - 'JP-14'
-  - 'Kanagawa'
-- - 'JP-39'
-  - 'Kōchi'
-- - 'JP-43'
-  - 'Kumamoto'
-- - 'JP-26'
-  - 'Kyoto'
-- - 'JP-24'
-  - 'Mie'
-- - 'JP-04'
-  - 'Miyagi'
-- - 'JP-45'
-  - 'Miyazaki'
-- - 'JP-20'
-  - 'Nagano'
-- - 'JP-42'
-  - 'Nagasaki'
-- - 'JP-29'
-  - 'Nara'
-- - 'JP-15'
-  - 'Niigata'
-- - 'JP-44'
-  - 'Ōita'
-- - 'JP-33'
-  - 'Okayama'
-- - 'JP-47'
-  - 'Okinawa'
-- - 'JP-27'
-  - 'Osaka'
-- - 'JP-41'
-  - 'Saga'
-- - 'JP-11'
-  - 'Saitama'
-- - 'JP-25'
-  - 'Shiga'
-- - 'JP-32'
-  - 'Shimane'
-- - 'JP-22'
-  - 'Shizuoka'
-- - 'JP-09'
-  - 'Tochigi'
-- - 'JP-36'
-  - 'Tokushima'
-- - 'JP-13'
-  - 'Tokyo'
-- - 'JP-31'
-  - 'Tottori'
-- - 'JP-16'
-  - 'Toyama'
-- - 'JP-30'
-  - 'Wakayama'
-- - 'JP-06'
-  - 'Yamagata'
-- - 'JP-35'
-  - 'Yamaguchi'
-- - 'JP-19'
-  - 'Yamanashi'
+- - 'Aichi'
+  - 'JP-23'
+- - 'Akita'
+  - 'JP-05'
+- - 'Aomori'
+  - 'JP-02'
+- - 'Chiba'
+  - 'JP-12'
+- - 'Ehime'
+  - 'JP-38'
+- - 'Fukui'
+  - 'JP-18'
+- - 'Fukuoka'
+  - 'JP-40'
+- - 'Fukushima'
+  - 'JP-07'
+- - 'Gifu'
+  - 'JP-21'
+- - 'Gunma'
+  - 'JP-10'
+- - 'Hiroshima'
+  - 'JP-34'
+- - 'Hokkaidō'
+  - 'JP-01'
+- - 'Hyōgo'
+  - 'JP-28'
+- - 'Ibaraki'
+  - 'JP-08'
+- - 'Ishikawa'
+  - 'JP-17'
+- - 'Iwate'
+  - 'JP-03'
+- - 'Kagawa'
+  - 'JP-37'
+- - 'Kagoshima'
+  - 'JP-46'
+- - 'Kanagawa'
+  - 'JP-14'
+- - 'Kōchi'
+  - 'JP-39'
+- - 'Kumamoto'
+  - 'JP-43'
+- - 'Kyoto'
+  - 'JP-26'
+- - 'Mie'
+  - 'JP-24'
+- - 'Miyagi'
+  - 'JP-04'
+- - 'Miyazaki'
+  - 'JP-45'
+- - 'Nagano'
+  - 'JP-20'
+- - 'Nagasaki'
+  - 'JP-42'
+- - 'Nara'
+  - 'JP-29'
+- - 'Niigata'
+  - 'JP-15'
+- - 'Ōita'
+  - 'JP-44'
+- - 'Okayama'
+  - 'JP-33'
+- - 'Okinawa'
+  - 'JP-47'
+- - 'Osaka'
+  - 'JP-27'
+- - 'Saga'
+  - 'JP-41'
+- - 'Saitama'
+  - 'JP-11'
+- - 'Shiga'
+  - 'JP-25'
+- - 'Shimane'
+  - 'JP-32'
+- - 'Shizuoka'
+  - 'JP-22'
+- - 'Tochigi'
+  - 'JP-09'
+- - 'Tokushima'
+  - 'JP-36'
+- - 'Tokyo'
+  - 'JP-13'
+- - 'Tottori'
+  - 'JP-31'
+- - 'Toyama'
+  - 'JP-16'
+- - 'Wakayama'
+  - 'JP-30'
+- - 'Yamagata'
+  - 'JP-06'
+- - 'Yamaguchi'
+  - 'JP-35'
+- - 'Yamanashi'
+  - 'JP-19'
