fixed some France localization

--- a/data/states/ja_fr.yml
+++ b/data/states/ja_fr.yml
@@ -44,3 +44,221 @@
   - "U"
 - - "ローヌ＝アルプ地域圏"
   - "V"
+- - "アン県"
+  - "01"
+- - "エーヌ県"
+  - "02"
+- - "アリエ県"
+  - "03"
+- - "アルプ＝ド＝オート＝プロヴァンス県"
+  - "04"
+- - "オート＝アルプ県"
+  - "05"
+- - "アルプ＝マリティーム県"
+  - "06"
+- - "アルデシュ県"
+  - "07"
+- - "アルデンヌ県"
+  - "08"
+- - "アリエージュ県"
+  - "09"
+- - "オーブ県"
+  - "10"
+- - "オード県"
+  - "11"
+- - "アヴェロン県"
+  - "12"
+- - "ブーシュ＝デュ＝ローヌ県"
+  - "13"
+- - "カルヴァドス県"
+  - "14"
+- - "カンタル県"
+  - "15"
+- - "シャラント県"
+  - "16"
+- - "シャラント＝マリティーム県"
+  - "17"
+- - "シェール県"
+  - "18"
+- - "コレーズ県"
+  - "19"
+- - "コート＝ドール県"
+  - "21"
+- - "コート＝ダルモール県"
+  - "22"
+- - "クルーズ県"
+  - "23"
+- - "ドルドーニュ県"
+  - "24"
+- - "ドゥー県"
+  - "25"
+- - "ドローム県"
+  - "26"
+- - "ウール県"
+  - "27"
+- - "ウール＝エ＝ロワール県"
+  - "28"
+- - "フィニステール県"
+  - "29"
+- - "コルス＝デュ＝シュド県"
+  - "2A"
+- - "オート＝コルス県"
+  - "2B"
+- - "ガール県"
+  - "30"
+- - "オート＝ガロンヌ県"
+  - "31"
+- - "ジェール県"
+  - "32"
+- - "ジロンド県"
+  - "33"
+- - "エロー県"
+  - "34"
+- - "イル＝エ＝ヴィレーヌ県"
+  - "35"
+- - "アンドル県"
+  - "36"
+- - "アンドル＝エ＝ロワール県"
+  - "37"
+- - "イゼール県"
+  - "38"
+- - "ジュラ県"
+  - "39"
+- - "ランド県"
+  - "40"
+- - "ロワール＝エ＝シェール県"
+  - "41"
+- - "ロワール県"
+  - "42"
+- - "オート＝ロワール県"
+  - "43"
+- - "ロワール＝アトランティック県"
+  - "44"
+- - "ロワレ県"
+  - "45"
+- - "ロット県"
+  - "46"
+- - "ロット＝エ＝ガロンヌ県"
+  - "47"
+- - "ロゼール県"
+  - "48"
+- - "メーヌ＝エ＝ロワール県"
+  - "49"
+- - "マンシュ県"
+  - "50"
+- - "マルヌ県"
+  - "51"
+- - "オート＝マルヌ県"
+  - "52"
+- - "マイエンヌ県"
+  - "53"
+- - "ムルト＝エ＝モゼル県"
+  - "54"
+- - "ムーズ県"
+  - "55"
+- - "モルビアン県"
+  - "56"
+- - "モゼル県"
+  - "57"
+- - "ニエーヴル県"
+  - "58"
+- - "ノール県"
+  - "59"
+- - "オワーズ県"
+  - "60"
+- - "オルヌ県"
+  - "61"
+- - "パ＝ド＝カレー県"
+  - "62"
+- - "ピュイ＝ド＝ドーム県"
+  - "63"
+- - "ピレネー＝アトランティック県"
+  - "64"
+- - "オート＝ピレネー県"
+  - "65"
+- - "ピレネー＝オリアンタル県"
+  - "66"
+- - "バ＝ラン県"
+  - "67"
+- - "オー＝ラン県"
+  - "68"
+- - "ローヌ県"
+  - "69"
+- - "オート＝ソーヌ県"
+  - "70"
+- - "ソーヌ＝エ＝ロワール県"
+  - "71"
+- - "サルト県"
+  - "72"
+- - "サヴォワ県"
+  - "73"
+- - "オート＝サヴォワ県"
+  - "74"
+- - "パリ（旧:セーヌ県）"
+  - "75"
+- - "セーヌ＝マリティーム県"
+  - "76"
+- - "セーヌ＝エ＝マルヌ県"
+  - "77"
+- - "イヴリーヌ県"
+  - "78"
+- - "ドゥー＝セーヴル県"
+  - "79"
+- - "ソンム県"
+  - "80"
+- - "タルヌ県"
+  - "81"
+- - "タルヌ＝エ＝ガロンヌ県"
+  - "82"
+- - "ヴァール県"
+  - "83"
+- - "ヴォクリューズ県"
+  - "84"
+- - "ヴァンデ県"
+  - "85"
+- - "ヴィエンヌ県"
+  - "86"
+- - "オート＝ヴィエンヌ県"
+  - "87"
+- - "ヴォージュ県"
+  - "88"
+- - "ヨンヌ県"
+  - "89"
+- - "テリトワール＝ド＝ベルフォール県"
+  - "90"
+- - "エソンヌ県"
+  - "91"
+- - "オー＝ド＝セーヌ県"
+  - "92"
+- - "セーヌ＝サン＝ドニ県"
+  - "93"
+- - "ヴァル＝ド＝マルヌ県"
+  - "94"
+- - "ヴァル＝ドワーズ県"
+  - "95"
+- - "クリッパートン島"
+  - "CP"
+- - "サン・バルテルミー島"
+  - "BL"
+- - "フランス領ギアナ"
+  - "GF"
+- - "グアドループ"
+  - "GP"
+- - "サン・マルタン島"
+  - "MF"
+- - "マルティニーク"
+  - "MQ"
+- - "ニューカレドニア"
+  - "NC"
+- - "フランス領ポリネシア"
+  - "PF"
+- - "サンピエール島・ミクロン島"
+  - "PM"
+- - "レユニオン"
+  - "RE"
+- - "フランス領南方・南極地域"
+  - "TF"
+- - "ウォリス・フツナ諸島"
+  - "WF"
+- - "マヨット海外準県"
+  - "YT"
