--- a/data/states/ie.yml
+++ b/data/states/ie.yml
@@ -1,7 +1,7 @@
 # data collected for wikipedia entry for Ireland
 ---
 - - "Connaught"
-  - "C [note 1]"
+  - "C-connaught"
 - - "Leinster"
   - "L"
 - - "Munster"
@@ -15,7 +15,7 @@
 - - "Clare"
   - "CE"
 - - "Cork"
-  - "C [note 1]"
+  - "C-cork"
 - - "Donegal"
   - "DL"
 - - "Dublin"
