--- a/data/states/gb.yml
+++ b/data/states/gb.yml
@@ -1,7 +1,7 @@
 # data collected for wikipedia entry for United Kingdom
 ---
-- - "Great Britain"
-  - ""
+- - "Buckinghamshire"
+  - "BKM"
 - - "Cambridgeshire"
   - "CAM"
 - - "Cumbria"
