--- a/data/states/cn.yml
+++ b/data/states/cn.yml
@@ -1,70 +1,70 @@
 # data collected for wikipedia entry for China
 ---
-- - "Beijing"
+- - "北京"
   - "11"
-- - "Chongqing"
+- - "重庆"
   - "50"
-- - "Shanghai"
+- - "上海"
   - "31"
-- - "Tianjin"
+- - "天津"
   - "12"
-- - "Anhui"
+- - "安徽"
   - "34"
-- - "Fujian"
+- - "福建"
   - "35"
-- - "Gansu"
+- - "甘肃"
   - "62"
-- - "Guangdong"
+- - "广东"
   - "44"
-- - "Guizhou"
+- - "贵州"
   - "52"
-- - "Hainan"
+- - "海南"
   - "46"
-- - "Hebei"
+- - "河北"
   - "13"
-- - "Heilongjiang"
+- - "黑龙江"
   - "23"
-- - "Henan"
+- - "河南"
   - "41"
-- - "Hubei"
+- - "湖北"
   - "42"
-- - "Hunan"
+- - "湖南"
   - "43"
-- - "Jiangsu"
+- - "江苏"
   - "32"
-- - "Jiangxi"
+- - "江西"
   - "36"
-- - "Jilin"
+- - "吉林"
   - "22"
-- - "Liaoning"
+- - "辽宁"
   - "21"
-- - "Qinghai"
+- - "青海"
   - "63"
-- - "Shaanxi"
+- - "山西"
   - "61"
-- - "Shandong"
+- - "山东"
   - "37"
-- - "Shanxi"
+- - "陕西"
   - "14"
-- - "Sichuan"
+- - "四川"
   - "51"
-- - "Taiwan"
+- - "台湾"
   - "71"
-- - "Yunnan"
+- - "云南"
   - "53"
-- - "Zhejiang"
+- - "浙江"
   - "33"
-- - "Guangxi"
+- - "广西"
   - "45"
-- - "Nei Mongol"
+- - "内蒙古"
   - "15"
-- - "Ningxia"
+- - "宁夏"
   - "64"
-- - "Xinjiang"
+- - "新疆"
   - "65"
-- - "Xizang"
+- - "西藏"
   - "54"
-- - "Hong Kong"
+- - "香港"
   - "91"
-- - "Macao"
+- - "澳门"
   - "92"
