quote all country codes and names to make type unambigous

--- a/data/countries/tw.yml
+++ b/data/countries/tw.yml
@@ -1,493 +1,493 @@
 ---
-- - 阿富汗
-  - AF
-- - 奧蘭群島
-  - AX
-- - 阿爾巴尼亞
-  - AL
-- - 阿爾及利亞
-  - DZ
-- - 美屬薩摩亞
-  - AS
-- - 安道爾
-  - AD
-- - 安哥拉
-  - AO
-- - 安圭拉
-  - AI
-- - 南極洲
-  - AQ
-- - 安提瓜和巴布達
-  - AG
-- - 阿根廷
-  - AR
-- - 亞美尼亞
-  - AM
-- - 阿魯巴
-  - AW
-- - 澳大利亞
-  - AU
-- - 奧地利
-  - AT
-- - 阿塞拜疆
-  - AZ
-- - 巴哈馬
-  - BS
-- - 巴林
-  - BH
-- - 孟加拉
-  - BD
-- - 巴巴多斯
-  - BB
-- - 白俄羅斯
-  - BY
-- - 比利時
-  - BE
-- - 伯利茲
-  - BZ
-- - 貝寧 
-  - BJ
-- - 百慕大
-  - BM
-- - 不丹
-  - BT
-- - 玻利維亞
-  - BO
-- - 波黑
-  - BA
-- - 博茨瓦納
-  - BW
-- - 布維島
-  - BV
-- - 巴西
-  - BR
-- - 英屬印度洋
-  - IO
-- - 文萊
-  - BN
-- - 保加利亞 
-  - BG
-- - 布基納法索  
-  - BF
-- - 布隆迪  
-  - BI
-- - 柬埔寨 
-  - KH
-- - 喀麥隆
-  - CM
-- - 加拿大
-  - CA
-- - 佛得角
-  - CV
-- - 開曼群島
-  - KY
-- - 中非
-  - CF
-- - 乍得
-  - TD
-- - 智利
-  - CL
-- - 中國 
-  - CN
-- - 聖誕島 
-  - CX
-- - 科科斯（基林）群島
-  - CC
-- - 哥倫比亞 
-  - CO
-- - 科摩羅
-  - KM
-- - 剛果（布）
-  - CG
-- - 剛果（金） 
-  - CD
-- - 庫克群島  
-  - CK
-- - 哥斯達黎加
-  - CR
-- - 科特迪瓦
-  - CI
-- - 克羅地亞
-  - HR
-- - 古巴 
-  - CU
-- - 塞浦路斯
-  - CY
-- - 捷克
-  - CZ
-- - 丹麥
-  - DK
-- - 吉布提 
-  - DJ
-- - 多米尼克
-  - DM
-- - 多米尼加 
-  - DO
-- - 厄瓜多爾 
-  - EC
-- - 埃及 
-  - EG
-- - 薩爾瓦多 
-  - SV
-- - 赤道幾內亞  
-  - GQ
-- - 厄立特裡亞  
-  - ER
-- - 愛沙尼亞 
-  - EE
-- - 埃塞俄比亞  
-  - ET
-- - 福克蘭群島（馬爾維納斯）  
-  - FK
-- - 法羅群島  
-  - FO
-- - 斐濟
-  - FJ
-- - 芬蘭 
-  - FI
-- - 法國  
-  - FR
-- - 法屬圭亞那 
-  - GF
-- - 法屬波利尼西亞 
-  - PF
-- - 法國南部領土
-  - TF
-- - 加蓬 
-  - GA
-- - 岡比亞  
-  - GM
-- - 格魯吉亞
-  - GE
-- - 德國  
-  - DE
-- - 加納 
-  - GH
-- - 直布羅陀  
-  - GI
-- - 希臘 
-  - GR
-- - 格陵蘭 
-  - GL
-- - 格林納達  
-  - GD
-- - 瓜德羅普
-  - GP
-- - 關島
-  - GU
-- - 危地馬拉 
-  - GT
-- - 根西島
-  - GG
-- - 幾內亞 
-  - GN
-- - 幾內亞比紹  
-  - GW
-- - 圭亞那  
-  - GY
-- - 海地
-  - HT
-- - 赫德島和麥克唐納島
-  - HM
-- - 梵蒂岡
-  - VA
-- - 洪都拉斯 
-  - HN
-- - 中國香港  
-  - HK
-- - 匈牙利  
-  - HU
-- - 冰島 
-  - IS
-- - 印度 
-  - IN
-- - 印度尼西亞  
-  - ID
-- - 伊朗  
-  - IR
-- - 伊拉克  
-  - IQ
-- - 愛爾蘭
-  - IE
-- - 馬恩島
-  - IM
-- - 以色列  
-  - IL
-- - 意大利  
-  - IT
-- - 牙買加
-  - JM
-- - 日本 
-  - JP
-- - 澤西島 
-  - JE
-- - 約旦 
-  - JO
-- - 哈薩克斯坦  
-  - KZ
-- - 肯尼亞  
-  - KE
-- - 基裡巴斯 
-  - KI
-- - 朝鮮
-  - KP
-- - 韓國
-  - KR
-- - 科索沃  
-  - KV
-- - 科威特  
-  - KW
-- - 吉爾吉斯 
-  - KG
-- - 老撾
-  - LA
-- - 拉脫維亞
-  - LV
-- - 黎巴嫩  
-  - LB
-- - 萊索托 
-  - LS
-- - 利比裡亞 
-  - LR
-- - 利比亞 
-  - LY
-- - 列支敦士登 
-  - LI
-- - 立陶宛  
-  - LT
-- - 盧森堡  
-  - LU
-- - 中國澳門  
-  - MO
-- - 馬其頓  
-  - MK
-- - 馬達加斯加  
-  - MG
-- - 馬拉維
-  - MW
-- - 馬來西亞  
-  - MY
-- - 馬爾代夫 
-  - MV
-- - 馬裡 
-  - ML
-- - 馬耳他  
-  - MT
-- - 馬紹爾群島  
-  - MH
-- - 馬提尼克
-  - MQ
-- - 毛裡塔尼亞 
-  - MR
-- - 毛裡求斯 
-  - MU
-- - 馬約特 
-  - YT
-- - 墨西哥  
-  - MX
-- - 密克羅尼西亞聯邦  
-  - FM
-- - 摩爾多瓦
-  - MD
-- - 摩納哥 
-  - MC
-- - 蒙古 
-  - MN
-- - 黑山 
-  - ME
-- - 蒙特塞拉特 
-  - MS
-- - 摩洛哥 
-  - MA
-- - 莫桑比克 
-  - MZ
-- - 緬甸 
-  - MM
-- - 納米比亞 
-  - NA
-- - 瑙魯 
-  - NR
-- - 尼泊爾  
-  - NP
-- - 荷蘭  
-  - NL
-- - 荷屬安的列斯  
-  - AN
-- - 新喀裡多尼亞  
-  - NC
-- - 新西蘭 
-  - NZ
-- - 尼加拉瓜 
-  - NI
-- - 尼日爾  
-  - NE
-- - 尼日利亞 
-  - NG
-- - 紐埃  
-  - NU
-- - 諾福克島  
-  - NF
-- - 北馬裡亞納  
-  - MP
-- - 挪威  
+- - '阿富汗'
+  - 'AF'
+- - '奧蘭群島'
+  - 'AX'
+- - '阿爾巴尼亞'
+  - 'AL'
+- - '阿爾及利亞'
+  - 'DZ'
+- - '美屬薩摩亞'
+  - 'AS'
+- - '安道爾'
+  - 'AD'
+- - '安哥拉'
+  - 'AO'
+- - '安圭拉'
+  - 'AI'
+- - '南極洲'
+  - 'AQ'
+- - '安提瓜和巴布達'
+  - 'AG'
+- - '阿根廷'
+  - 'AR'
+- - '亞美尼亞'
+  - 'AM'
+- - '阿魯巴'
+  - 'AW'
+- - '澳大利亞'
+  - 'AU'
+- - '奧地利'
+  - 'AT'
+- - '阿塞拜疆'
+  - 'AZ'
+- - '巴哈馬'
+  - 'BS'
+- - '巴林'
+  - 'BH'
+- - '孟加拉'
+  - 'BD'
+- - '巴巴多斯'
+  - 'BB'
+- - '白俄羅斯'
+  - 'BY'
+- - '比利時'
+  - 'BE'
+- - '伯利茲'
+  - 'BZ'
+- - '貝寧'
+  - 'BJ'
+- - '百慕大'
+  - 'BM'
+- - '不丹'
+  - 'BT'
+- - '玻利維亞'
+  - 'BO'
+- - '波黑'
+  - 'BA'
+- - '博茨瓦納'
+  - 'BW'
+- - '布維島'
+  - 'BV'
+- - '巴西'
+  - 'BR'
+- - '英屬印度洋'
+  - 'IO'
+- - '文萊'
+  - 'BN'
+- - '保加利亞'
+  - 'BG'
+- - '布基納法索'
+  - 'BF'
+- - '布隆迪'
+  - 'BI'
+- - '柬埔寨'
+  - 'KH'
+- - '喀麥隆'
+  - 'CM'
+- - '加拿大'
+  - 'CA'
+- - '佛得角'
+  - 'CV'
+- - '開曼群島'
+  - 'KY'
+- - '中非'
+  - 'CF'
+- - '乍得'
+  - 'TD'
+- - '智利'
+  - 'CL'
+- - '中國'
+  - 'CN'
+- - '聖誕島'
+  - 'CX'
+- - '科科斯（基林）群島'
+  - 'CC'
+- - '哥倫比亞'
+  - 'CO'
+- - '科摩羅'
+  - 'KM'
+- - '剛果（布）'
+  - 'CG'
+- - '剛果（金）'
+  - 'CD'
+- - '庫克群島'
+  - 'CK'
+- - '哥斯達黎加'
+  - 'CR'
+- - '科特迪瓦'
+  - 'CI'
+- - '克羅地亞'
+  - 'HR'
+- - '古巴'
+  - 'CU'
+- - '塞浦路斯'
+  - 'CY'
+- - '捷克'
+  - 'CZ'
+- - '丹麥'
+  - 'DK'
+- - '吉布提'
+  - 'DJ'
+- - '多米尼克'
+  - 'DM'
+- - '多米尼加'
+  - 'DO'
+- - '厄瓜多爾'
+  - 'EC'
+- - '埃及'
+  - 'EG'
+- - '薩爾瓦多'
+  - 'SV'
+- - '赤道幾內亞'
+  - 'GQ'
+- - '厄立特裡亞'
+  - 'ER'
+- - '愛沙尼亞'
+  - 'EE'
+- - '埃塞俄比亞'
+  - 'ET'
+- - '福克蘭群島（馬爾維納斯）'
+  - 'FK'
+- - '法羅群島'
+  - 'FO'
+- - '斐濟'
+  - 'FJ'
+- - '芬蘭'
+  - 'FI'
+- - '法國'
+  - 'FR'
+- - '法屬圭亞那'
+  - 'GF'
+- - '法屬波利尼西亞'
+  - 'PF'
+- - '法國南部領土'
+  - 'TF'
+- - '加蓬'
+  - 'GA'
+- - '岡比亞'
+  - 'GM'
+- - '格魯吉亞'
+  - 'GE'
+- - '德國'
+  - 'DE'
+- - '加納'
+  - 'GH'
+- - '直布羅陀'
+  - 'GI'
+- - '希臘'
+  - 'GR'
+- - '格陵蘭'
+  - 'GL'
+- - '格林納達'
+  - 'GD'
+- - '瓜德羅普'
+  - 'GP'
+- - '關島'
+  - 'GU'
+- - '危地馬拉'
+  - 'GT'
+- - '根西島'
+  - 'GG'
+- - '幾內亞'
+  - 'GN'
+- - '幾內亞比紹'
+  - 'GW'
+- - '圭亞那'
+  - 'GY'
+- - '海地'
+  - 'HT'
+- - '赫德島和麥克唐納島'
+  - 'HM'
+- - '梵蒂岡'
+  - 'VA'
+- - '洪都拉斯'
+  - 'HN'
+- - '中國香港'
+  - 'HK'
+- - '匈牙利'
+  - 'HU'
+- - '冰島'
+  - 'IS'
+- - '印度'
+  - 'IN'
+- - '印度尼西亞'
+  - 'ID'
+- - '伊朗'
+  - 'IR'
+- - '伊拉克'
+  - 'IQ'
+- - '愛爾蘭'
+  - 'IE'
+- - '馬恩島'
+  - 'IM'
+- - '以色列'
+  - 'IL'
+- - '意大利'
+  - 'IT'
+- - '牙買加'
+  - 'JM'
+- - '日本'
+  - 'JP'
+- - '澤西島'
+  - 'JE'
+- - '約旦'
+  - 'JO'
+- - '哈薩克斯坦'
+  - 'KZ'
+- - '肯尼亞'
+  - 'KE'
+- - '基裡巴斯'
+  - 'KI'
+- - '朝鮮'
+  - 'KP'
+- - '韓國'
+  - 'KR'
+- - '科索沃'
+  - 'KV'
+- - '科威特'
+  - 'KW'
+- - '吉爾吉斯'
+  - 'KG'
+- - '老撾'
+  - 'LA'
+- - '拉脫維亞'
+  - 'LV'
+- - '黎巴嫩'
+  - 'LB'
+- - '萊索托'
+  - 'LS'
+- - '利比裡亞'
+  - 'LR'
+- - '利比亞'
+  - 'LY'
+- - '列支敦士登'
+  - 'LI'
+- - '立陶宛'
+  - 'LT'
+- - '盧森堡'
+  - 'LU'
+- - '中國澳門'
+  - 'MO'
+- - '馬其頓'
+  - 'MK'
+- - '馬達加斯加'
+  - 'MG'
+- - '馬拉維'
+  - 'MW'
+- - '馬來西亞'
+  - 'MY'
+- - '馬爾代夫'
+  - 'MV'
+- - '馬裡'
+  - 'ML'
+- - '馬耳他'
+  - 'MT'
+- - '馬紹爾群島'
+  - 'MH'
+- - '馬提尼克'
+  - 'MQ'
+- - '毛裡塔尼亞'
+  - 'MR'
+- - '毛裡求斯'
+  - 'MU'
+- - '馬約特'
+  - 'YT'
+- - '墨西哥'
+  - 'MX'
+- - '密克羅尼西亞聯邦'
+  - 'FM'
+- - '摩爾多瓦'
+  - 'MD'
+- - '摩納哥'
+  - 'MC'
+- - '蒙古'
+  - 'MN'
+- - '黑山'
+  - 'ME'
+- - '蒙特塞拉特'
+  - 'MS'
+- - '摩洛哥'
+  - 'MA'
+- - '莫桑比克'
+  - 'MZ'
+- - '緬甸'
+  - 'MM'
+- - '納米比亞'
+  - 'NA'
+- - '瑙魯'
+  - 'NR'
+- - '尼泊爾'
+  - 'NP'
+- - '荷蘭'
+  - 'NL'
+- - '荷屬安的列斯'
+  - 'AN'
+- - '新喀裡多尼亞'
+  - 'NC'
+- - '新西蘭'
+  - 'NZ'
+- - '尼加拉瓜'
+  - 'NI'
+- - '尼日爾'
+  - 'NE'
+- - '尼日利亞'
+  - 'NG'
+- - '紐埃'
+  - 'NU'
+- - '諾福克島'
+  - 'NF'
+- - '北馬裡亞納'
+  - 'MP'
+- - '挪威'
   - 'NO'
-- - 阿曼 
-  - OM
-- - 巴基斯坦 
-  - PK
-- - 帕勞 
-  - PW
-- - 巴勒斯坦
-  - PS
-- - 巴拿馬  
-  - PA
-- - 巴布亞新幾內亞  
-  - PG
-- - 巴拉圭  
-  - PY
-- - 秘魯  
-  - PE
-- - 菲律賓  
-  - PH
-- - 皮特開恩群島  
-  - PN
-- - 波蘭 
-  - PL
-- - 葡萄牙  
-  - PT
-- - 波多黎各 
-  - PR
-- - 卡塔爾 
-  - QA
-- - 留尼汪 
-  - RE
-- - 羅馬尼亞  
-  - RO
-- - 俄羅斯 
-  - RU
-- - 盧旺達  
-  - RW
-- - 聖赫勒拿
-  - SH
-- - 聖基茨和尼維斯
-  - KN
-- - 聖盧西亞  
-  - LC
-- - 聖皮埃爾和密克隆  
-  - PM
-- - 聖文森特和格林納丁斯
-  - VC
-- - 薩摩亞  
-  - WS
-- - 聖馬力諾
-  - SM
-- - 聖多美和普林西比 
-  - ST
-- - 沙特阿拉伯 
-  - SA
-- - 塞內加爾
-  - SN
-- - 塞爾維亞 
-  - RS
-- - 塞舌爾  
-  - SC
-- - 塞拉利昂 
-  - SL
-- - 新加坡  
-  - SG
-- - 斯洛伐克 
-  - SK
-- - 斯洛文尼亞  
-  - SI
-- - 所羅門群島 
-  - SB
-- - 索馬裡  
-  - SO
-- - 南非 
-  - ZA
-- - 南喬治亞島和南桑得韋奇島
-  - GS
-- - 西班牙 
-  - ES
-- - 斯裡蘭卡 
-  - LK
-- - 蘇丹 
-  - SD
-- - 蘇裡南  
-  - SR
-- - 斯瓦爾巴群島  
-  - SJ
-- - 斯威士蘭  
-  - SZ
-- - 瑞典  
-  - SE
-- - 瑞士  
-  - CH
-- - 敘利亞 
-  - SY
-- - 台灣  
-  - TW
-- - 塔吉克斯坦  
-  - TJ
-- - 坦桑尼亞 
-  - TZ
-- - 泰國 
-  - TH
-- - 東帝汶  
-  - TL
-- - 多哥 
-  - TG
-- - 托克勞 
-  - TK
-- - 湯加  
-  - TO
-- - 特立尼達和多巴哥 
-  - TT
-- - 突尼斯  
-  - TN
-- - 土耳其  
-  - TR
-- - 土庫曼斯坦 
-  - TM
-- - 特克斯與凱科斯群島 
-  - TC
-- - 圖瓦盧 
-  - TV
-- - 烏乾達  
-  - UG
-- - 烏克蘭
-  - UA
-- - 阿聯酋  
-  - AE
-- - 英國 
-  - GB
-- - 美國  
-  - US
-- - 美國本土外島嶼
-  - UM
-- - 烏拉圭  
-  - UY
-- - 烏茲別克斯坦 
-  - UZ
-- - 瓦努阿圖 
-  - VU
-- - 委內瑞拉 
-  - VE
-- - 越南
-  - VN
-- - 英屬維京群島  
-  - VG
-- - 美屬維京群島  
-  - VI
-- - 瓦利斯和富圖納 
-  - WF
-- - 西撒哈拉 
-  - EH
-- - 也門 
-  - YE
-- - 南斯拉夫 
-  - YU
-- - 贊比亞  
-  - ZM
-- - 津巴布韋
-  - ZW
+- - '阿曼'
+  - 'OM'
+- - '巴基斯坦'
+  - 'PK'
+- - '帕勞'
+  - 'PW'
+- - '巴勒斯坦'
+  - 'PS'
+- - '巴拿馬'
+  - 'PA'
+- - '巴布亞新幾內亞'
+  - 'PG'
+- - '巴拉圭'
+  - 'PY'
+- - '秘魯'
+  - 'PE'
+- - '菲律賓'
+  - 'PH'
+- - '皮特開恩群島'
+  - 'PN'
+- - '波蘭'
+  - 'PL'
+- - '葡萄牙'
+  - 'PT'
+- - '波多黎各'
+  - 'PR'
+- - '卡塔爾'
+  - 'QA'
+- - '留尼汪'
+  - 'RE'
+- - '羅馬尼亞'
+  - 'RO'
+- - '俄羅斯'
+  - 'RU'
+- - '盧旺達'
+  - 'RW'
+- - '聖赫勒拿'
+  - 'SH'
+- - '聖基茨和尼維斯'
+  - 'KN'
+- - '聖盧西亞'
+  - 'LC'
+- - '聖皮埃爾和密克隆'
+  - 'PM'
+- - '聖文森特和格林納丁斯'
+  - 'VC'
+- - '薩摩亞'
+  - 'WS'
+- - '聖馬力諾'
+  - 'SM'
+- - '聖多美和普林西比'
+  - 'ST'
+- - '沙特阿拉伯'
+  - 'SA'
+- - '塞內加爾'
+  - 'SN'
+- - '塞爾維亞'
+  - 'RS'
+- - '塞舌爾'
+  - 'SC'
+- - '塞拉利昂'
+  - 'SL'
+- - '新加坡'
+  - 'SG'
+- - '斯洛伐克'
+  - 'SK'
+- - '斯洛文尼亞'
+  - 'SI'
+- - '所羅門群島'
+  - 'SB'
+- - '索馬裡'
+  - 'SO'
+- - '南非'
+  - 'ZA'
+- - '南喬治亞島和南桑得韋奇島'
+  - 'GS'
+- - '西班牙'
+  - 'ES'
+- - '斯裡蘭卡'
+  - 'LK'
+- - '蘇丹'
+  - 'SD'
+- - '蘇裡南'
+  - 'SR'
+- - '斯瓦爾巴群島'
+  - 'SJ'
+- - '斯威士蘭'
+  - 'SZ'
+- - '瑞典'
+  - 'SE'
+- - '瑞士'
+  - 'CH'
+- - '敘利亞'
+  - 'SY'
+- - '台灣'
+  - 'TW'
+- - '塔吉克斯坦'
+  - 'TJ'
+- - '坦桑尼亞'
+  - 'TZ'
+- - '泰國'
+  - 'TH'
+- - '東帝汶'
+  - 'TL'
+- - '多哥'
+  - 'TG'
+- - '托克勞'
+  - 'TK'
+- - '湯加'
+  - 'TO'
+- - '特立尼達和多巴哥'
+  - 'TT'
+- - '突尼斯'
+  - 'TN'
+- - '土耳其'
+  - 'TR'
+- - '土庫曼斯坦'
+  - 'TM'
+- - '特克斯與凱科斯群島'
+  - 'TC'
+- - '圖瓦盧'
+  - 'TV'
+- - '烏乾達'
+  - 'UG'
+- - '烏克蘭'
+  - 'UA'
+- - '阿聯酋'
+  - 'AE'
+- - '英國'
+  - 'GB'
+- - '美國'
+  - 'US'
+- - '美國本土外島嶼'
+  - 'UM'
+- - '烏拉圭'
+  - 'UY'
+- - '烏茲別克斯坦'
+  - 'UZ'
+- - '瓦努阿圖'
+  - 'VU'
+- - '委內瑞拉'
+  - 'VE'
+- - '越南'
+  - 'VN'
+- - '英屬維京群島'
+  - 'VG'
+- - '美屬維京群島'
+  - 'VI'
+- - '瓦利斯和富圖納'
+  - 'WF'
+- - '西撒哈拉'
+  - 'EH'
+- - '也門'
+  - 'YE'
+- - '南斯拉夫'
+  - 'YU'
+- - '贊比亞'
+  - 'ZM'
+- - '津巴布韋'
+  - 'ZW'
