--- a/data/states/cn_de.yml
+++ b/data/states/cn_de.yml
@@ -1,33 +1,33 @@
 ---
-- - Baden-Württemberg
-  - BW
-- - Bayern
-  - BY
-- - Berlin
-  - BE
-- - Brandenburg
-  - BR
-- - Bremen
-  - HB
-- - Hamburg
-  - HH
-- - Hessen
-  - HE
-- - Mecklenburg-Vorpommern
-  - MV
-- - Niedersachsen
-  - NI
-- - Nordrhein-Westfalen
-  - NW
-- - Rheinland-Pfalz
-  - RP
-- - Saarland
-  - SL
-- - Sachsen
-  - SN
-- - Sachsen-Anhalt
-  - ST
-- - Schleswig-Holstein
-  - SH
-- - Thüringen
-  - TH
+- - "Baden-Württemberg"
+  - "BW"
+- - "Bayern"
+  - "BY"
+- - "Berlin"
+  - "BE"
+- - "Brandenburg"
+  - "BR"
+- - "Bremen"
+  - "HB"
+- - "Hamburg"
+  - "HH"
+- - "Hessen"
+  - "HE"
+- - "Mecklenburg-Vorpommern"
+  - "MV"
+- - "Niedersachsen"
+  - "NI"
+- - "Nordrhein-Westfalen"
+  - "NW"
+- - "Rheinland-Pfalz"
+  - "RP"
+- - "Saarland"
+  - "SL"
+- - "Sachsen"
+  - "SN"
+- - "Sachsen-Anhalt"
+  - "ST"
+- - "Schleswig-Holstein"
+  - "SH"
+- - "Thüringen"
+  - "TH"
