--- a/data/states/tw_dk.yml
+++ b/data/states/tw_dk.yml
@@ -1,11 +1,11 @@
 ---
-- - Region Hovedstaden
-  - RH
-- - Region Midtjylland
-  - RM
-- - Region Nordjylland
-  - RN
-- - Region Sjælland
-  - RSj
-- - Region Syddanmark
-  - RSy
+- - "Region Hovedstaden"
+  - "RH"
+- - "Region Midtjylland"
+  - "RM"
+- - "Region Nordjylland"
+  - "RN"
+- - "Region Sjælland"
+  - "RSj"
+- - "Region Syddanmark"
+  - "RSy"
